# godot

./: .gitattributes  .gitignore  README.md  SConstruct  WEBGPU_BRANCH.md
.github/: copilot-instructions.md
.github/workflows/: komm64-build.yml  komm64-webgpu-web-build.yml  web_builds.yml  webgpu_tests.yml
core/: core_constants.cpp
core/io/: dir_access.cpp  dir_access.h  resource.cpp
drivers/: SCsub
drivers/webgpu/naga-converter/fuzz/: Cargo.toml
drivers/webgpu/naga-converter/fuzz/fuzz_targets/: preprocess_passes.rs  spirv_to_wgsl.rs  split_samplers.rs
main/: main.cpp
webgpu_notes/: ASYNC_WEBGPU.md  BUFFER_UNMAP_32MB_FLUSH_ROOT_CAUSE.md  BUILD_BLOCKERS.md  COMMAND_BUFFERING_WASM_TO_JS.md  COMMAND_STREAM_RECORDER_PERF_OPTIM.md  DESIGN.md  FIX_2D_PLATFORMER.md  FIX_CONSOLE_ERRORS.md  FIX_PHASE7.md  IMPLEMENTATION.md  INITIAL_PLAN.md  IPC_OPTIMIZATION_SUMMARY.md  PR_DESCRIPTION.md  RESEARCH.md  SLOW_WINDOW_OR_TEXTURE_CREATION.md  STARTUP_PROFILING.md  TASKS.md  batched_images_to_vram.md  benchmark_vs_threejs.md  finish_async_shader_comp.md  manualy_run_benchmark_scenes.md  naga_to_tint.md  naga_to_tint_commit_message.md  naga_to_tint_debugging.md  native_vs_web_benchmarks.md  perf_optimization_may3_2026.md  precompile_naga_spirv_to_wgsl.md  precompile_specialized_to_wgsl.md  push_constant_ring_buffer.md  remove_rust.md
webgpu_site/: ARCHITECTURE_AND_DESIGN.md  CORRECTNESS_AND_COMPATIBILITY.md  FAQ.md  PERFORMANCE_AND_OPTIMIZATION.md  TECHNICAL_REFERENCE.md
webgpu_tests/: .gitignore  README.md  TASKS.md  local_ci.sh  profile_startup.mjs
(+263 files in other folders)
